[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r41010

--- a/debian/po/da.po
+++ b/debian/po/da.po
@@ -14,7 +14,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-09-15 13:29+0200\n"
+"PO-Revision-Date: 2006-09-25 14:36+0200\n"
 "Last-Translator: Claus Hindsgaul <claus.hindsgaul@gmail.com>\n"
 "Language-Team: Danish\n"
 "MIME-Version: 1.0\n"
@@ -33,17 +33,16 @@ msgstr "Fortsæt uden opstartsindlæser"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Genesi firmware in order for your "
 "system to boot automatically.  At the end of the installation, the system "
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"Der skal sættes nogle variable i Pegasos OpenFirmware, for at dit system kan "
+"Der skal sættes nogle variable i Genesi-firmwaren, for at dit system kan "
 "starte op automatisk. Ved afslutningen af installationen vil systemet "
-"genstarte. Sæt følgende OpenFirmware-variable ved Pegasos Openfirmware's "
-"prompt for at aktivere automatisk opstart:"
+"genstarte. Sæt følgende OpenFirmware-variable ved firmware-prompten for at "
+"aktivere automatisk opstart:"
 
 #. Type: note
 #. Description
@@ -80,13 +79,12 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:31
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
 "Du behøver kun at gøre dette én gang. Giv derefter kommandoen \"boot\" eller "
-"genstart systemet for at fortsætte til næste installationsstadium."
+"genstart systemet for at gå videre til dit nyinstallerede system."
 
 #. Type: note
 #. Description
@@ -114,7 +112,3 @@ msgid ""
 msgstr ""
 "Du bliver nødt til at starte op manuelt med ${KERNEL}-kernen på partitionen "
 "${BOOT} og give kommandoen ${ROOT} som kerneparameter."
-
-#, fuzzy
-#~ msgid "at the firmware prompt."
-#~ msgstr "ved OpenFirmware-prompten."
