--- a/debian/po/eo.po
+++ b/debian/po/eo.po
@@ -15,7 +15,7 @@ msgstr ""
 "Project-Id-Version: eo\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-07-16 15:52+0200\n"
+"PO-Revision-Date: 2006-09-25 11:54+0200\n"
 "Last-Translator: Serge Leblanc <serge.leblanc@wanadoo.fr>\n"
 "Language-Team: Esperanto <debian-l10n-esperanto@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -32,17 +32,16 @@ msgstr "Daŭrigu sen ekŝargilo"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Genesi firmware in order for your "
 "system to boot automatically.  At the end of the installation, the system "
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"Kelkaj variabloj en la firmvaro 'Pegasos OpenFirmware' bezonas agordaĵon por "
-"aŭtomate startigi Linukson. La sistemo reŝargiĝos post la instalado. Akomodu "
-"la sekvantaj variabloj dum la 'Pegasos OpenFirmware' invito por aktivigi la "
-"aŭtomatan ekŝargon."
+"Kelkaj variabloj en la firmvaro 'Genesi OpenFirmware' bezonas parametrojn "
+"por aŭtomate startigi Linukson. La sistemo reŝargiĝos post la instalado. "
+"Parametru la sekvantaj variabloj dum la 'Genesi OpenFirmware' invito por "
+"aktivigi la aŭtomatan ekŝargon."
 
 #. Type: note
 #. Description
@@ -78,13 +77,12 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:31
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
-"Tiu ordono nur plenumendos unue. Poste tajpu la \"boot\" ordonon aŭ reŝargu "
-"la sistemon por procedi la venontan instaladan fazon."
+"Tiu ordono nur plenumendos unue. Poste, tajpu la \"boot\" komando aŭ reŝargu "
+"la sistemon por uzi la novan instalitan 'Debian GNU/Linux'-distribuon."
 
 #. Type: note
 #. Description
@@ -111,7 +109,3 @@ msgid ""
 msgstr ""
 "Vi bezonos mane ekŝargi per la '${KERNEL}'-kerno de '${BOOT}'-diskpartigo "
 "kaj doni '${ROOT}' kiel argumento al ĉi kerno."
-
-#, fuzzy
-#~ msgid "at the firmware prompt."
-#~ msgstr "dum la firmvara 'OpenFirmware' invito"
