--- a/debian/po/hi.po
+++ b/debian/po/hi.po
@@ -3,7 +3,10 @@
 #
 # DO NOT MODIFY IT DIRECTLY : SUCH CHANGES WILL BE LOST
 # 
-# translation of debian-installer_packages_po.po to Hindi
+# translation of new-hi.po to Hindi
+# translation of debian-installer_packages_po.po to
+# translation of debian-installer_packages_po.po to
+# translation of debian-installer_packages_po.po to
 #
 #
 # Debian Installer master translation file template
@@ -16,19 +19,19 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: debian-installer_packages_po\n"
+"Project-Id-Version: new-hi\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-03-12 22:52+0530\n"
-"Last-Translator: Nishant Sharma <me@nishants.net>\n"
-"Language-Team:  <en@li.org>\n"
+"PO-Revision-Date: 2006-09-25 23:23+0530\n"
+"Last-Translator: Nishant Sharma <me at nishants.net>\n"
+"Language-Team: Hindi\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: 2\n"
 "X-Poedit-Language: Hindi\n"
 "X-Poedit-Country: INDIA\n"
-"X-Generator: KBabel 1.9.1\n"
+"X-Generator: KBabel 1.11.2\n"
 
 #. Type: text
 #. Description
@@ -50,10 +53,11 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
+#, fuzzy
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
-msgstr ""
+msgstr "वैकल्पिक रूप से, कर्नेल को बूट करने के लिए आप निम्नलिखित टंकित कर सकते हैं:"
 
 #. Type: note
 #. Description
