--- a/debian/po/lt.po
+++ b/debian/po/lt.po
@@ -15,7 +15,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-09-02 22:53+0300\n"
+"PO-Revision-Date: 2006-09-25 23:00+0300\n"
 "Last-Translator: Kęstutis Biliūnas <kebil@kaunas.init.lt>\n"
 "Language-Team: Lithuanian <komp_lt@konferencijos.lt>\n"
 "MIME-Version: 1.0\n"
@@ -32,17 +32,16 @@ msgstr "Tęsti be pradinio įkėliklio"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Genesi firmware in order for your "
 "system to boot automatically.  At the end of the installation, the system "
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"Kai kurie Pegasos OpenFirmware kintamieji turi būti nustatyti, tam kad "
+"Kai kurie mikroprogramos Genesi kintamieji turi būti nustatyti, tam kad "
 "sistema galėtų būti automatiškai įkelta. Įdiegimo pabaigoje, sistema bus "
-"perkraunama. Esant Pegasos OpenFirmware kvietimui,  nustatykite sekančius "
-"OpenFirmware kintamuosius, kad būtų galimas automatinis įkėlimas:"
+"perkraunama. Esant mikroprogramos kvietimui,  nustatykite sekančius "
+"mikroprogramos kintamuosius, kad būtų galimas automatinis įkėlimas:"
 
 #. Type: note
 #. Description
@@ -79,13 +78,12 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:31
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
 "Jūs turite padaryti tai tik vieną kartą. Po to įveskite komandą \"boot\" "
-"arba perkraukite sistemą, tam kad pereiti į sekantį diegimo etapą."
+"arba perkraukite sistemą, tam kad pratęstumėte naujai įdiegtoje sistemoje."
 
 #. Type: note
 #. Description
@@ -112,7 +110,3 @@ msgid ""
 msgstr ""
 "Jums teks atlikti įkeltį rankiniu būdu, naudojant branduolį ${KERNEL}, "
 "esantį disko skirsnyje ${BOOT}, ir perduodant jam parametrą ${ROOT}."
-
-#, fuzzy
-#~ msgid "at the firmware prompt."
-#~ msgstr "esant OpenFirmware kvietimui (prompt)."
