--- a/debian/po/mk.po
+++ b/debian/po/mk.po
@@ -14,7 +14,7 @@ msgstr ""
 "Project-Id-Version: mk\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-07-16 18:45+0200\n"
+"PO-Revision-Date: 2006-09-26 12:56+0200\n"
 "Last-Translator: Georgi Stanojevski <glisha@gmail.com>\n"
 "Language-Team: Macedonian <ossm-members@hedona.on.net.mk>\n"
 "MIME-Version: 1.0\n"
@@ -32,17 +32,16 @@ msgstr "Продолжи без подигнувач"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Genesi firmware in order for your "
 "system to boot automatically.  At the end of the installation, the system "
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"Некои променливи треба да бидат поставени во Pegasos OpenFirmware за да може "
+"Некои променливи треба да бидат поставени во Genesi фирмверот за да може "
 "твојот систем да се подигне автоматски. На крајот од инсталацијата системот "
-"ќе се ресетира. На промтот на Pegasos OpenFirmware, постави ги следните "
-"OpenFirmware променливи за да овозможиш автоматско бутирање:"
+"ќе се ресетира. На промтот  на фирмверот, постави ги следните фирмвер "
+"променливи за да овозможиш автоматско бутирање:"
 
 #. Type: note
 #. Description
@@ -79,13 +78,12 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:31
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
 "Ова треба да го направиш само еднаш. Потоа, внеси ја „boot“ командата или "
-"ресетирај го системот за да продолжиш во следната фаза на инсталацијата."
+"ресетирај го системот за да продолжиш во новоинсталираниот систем."
 
 #. Type: note
 #. Description
@@ -112,7 +110,3 @@ msgid ""
 msgstr ""
 "Ќе треба да бутираш рачно со кернелот ${KERNEL} на партицијата ${BOOT}и "
 "${ROOT} пренесен како аргумент на кернелот."
-
-#, fuzzy
-#~ msgid "at the firmware prompt."
-#~ msgstr "на OpenFirmware промтот."
