--- a/debian/po/bn.po
+++ b/debian/po/bn.po
@@ -9,18 +9,19 @@
 #
 # Anubadok, the en2bn auto-translator by Golam Mortuza Hossain <golam@imsc.res.in>, 2005.
 # Baishampayan Ghose <b.ghose@gnu.org.in>, 2005-2006.
-# Jamil Ahmed <jamil@bengalinux.org>, 2005.
+# Quazi Ashfaq-ur Rahman <quazi.ashfaq@gmail.com>, 2005.
 # Khandakar Mujahidul Islam <suzan@bengalinux.org>, 2005.
 # Progga <progga@BengaLinux.Org>, 2005, 2006.
-# Quazi Ashfaq-ur Rahman <quazi.ashfaq@gmail.com>, 2005.
-# 
+# Jamil Ahmed <jamil@bengalinux.org>, 2006.
+# Mahay Alam Khan (মাহে আলম খান) <makl10n@yahoo.com>, 2006.
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-05-04 20:00+0600\n"
-"Last-Translator: Progga <progga@BengaLinux.Org>\n"
+"PO-Revision-Date: 2006-09-16 00:23+0600\n"
+"Last-Translator: Mahay Alam Khan (মাহে আলম খান) <makl10n@yahoo.com>\n"
 "Language-Team: Bangla <core@BengaLinux.Org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -116,7 +117,3 @@ msgid ""
 msgstr ""
 "আপনাকে ${BOOT} পার্টিশনের ${KERNEL} কার্নেল ব্যবহার করে এবং ${ROOT}-কে কার্নেলের "
 "আর্গুমেন্ট হিসেবে ব্যবহার করে নিজ হাতেই বুট করতে হবে।"
-
-#, fuzzy
-#~ msgid "at the firmware prompt."
-#~ msgstr "ওপেনফার্মওয়্যারের প্রম্পটে।"
