--- a/debian/po/hr.po
+++ b/debian/po/hr.po
@@ -13,8 +13,8 @@ msgstr ""
 "Project-Id-Version: Debian-installer 1st-stage master file HR\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2005-03-05 21:51+0100\n"
-"Last-Translator: Krunoslav Gernhard <kruno@linux.hr>\n"
+"PO-Revision-Date: 2006-09-25 23:55+0200\n"
+"Last-Translator: Josip Rodin <joy+ditrans@linux.hr>\n"
 "Language-Team: Croatian <lokalizacija@linux.hr>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -30,17 +30,16 @@ msgstr "Nastavi bez boot učitavača"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Genesi firmware in order for your "
 "system to boot automatically.  At the end of the installation, the system "
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"Da bi vaš sustav automatski podizao Debian, neke varijable moraju biti "
-"postavljene u Pegasos OpenFirmware. Na kraju instalacije sustav će se ponovo "
-"podići. Na Pegasos OpenFirmware promptu postavite slijedeće OpenFirmware "
-"varijable za automatsko podizanje sustava:"
+"Kako bi se vaš sustav automatski podizao, neke varijable moraju biti "
+"postavljene u Genesi firmwareu. Na kraju instalacije sustav će se ponovo "
+"podići. Na firmware promptu postavite sljedeće firmware varijable za "
+"omogućavanje automatskog podizanja sustava:"
 
 #. Type: note
 #. Description
@@ -60,7 +59,6 @@ msgstr "Postavljanje 'firmware' varijabli za automatsko podizanje sustava"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:31
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Netwinder NeTTrom firmware in order for "
 "your system to boot linux automatically.  At the end of this installation "
@@ -68,23 +66,21 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
-"Da bi vaš sustav automatski podizao Debian, neke varijable moraju biti "
-"postavljene u Netwinder NeTTrom 'firmware'. Na kraju ovog stupnja "
-"instalacije sustav će se ponovo podići, a 'firmware' će se pokušati "
-"automatski pokrenuti. To možete prekinuti pritiskom na bilo koju tipku. Naći "
-"ćete se u NeTTrom zapovjednom sustavu, gdje morate izvršiti slijedeće "
-"naredbe:"
+"Kako bi se vaš sustav automatski podizao, neke varijable moraju biti "
+"postavljene u Netwinder NeTTrom firmwareu. Na kraju instalacije sustav će se "
+"ponovo podići, a firmware će pokušati automatski pokrenuti operacijski "
+"sustav. To možete prekinuti pritiskom na bilo koju tipku. Naći ćete se u "
+"NeTTrom zapovjednom sustavu, gdje morate izvršiti sljedeće naredbe:"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:31
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
 "To morate učiniti samo jednom. Nakon toga unesite naredbu 'boot', ili ponovo "
-"pokrenite sustav da nastavite do slijedećeg stupnja instalacije."
+"pokrenite sustav da kako bi nastavilo do svog novoinstaliranog sustava."
 
 #. Type: note
 #. Description
@@ -105,14 +101,9 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:51
-#, fuzzy
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
-"Morat ćete ručno podignuti sustav s kernelom ${KERNEL} na particiji ${BOOT} "
-"i ${ROOT}, kao argumentima proslijeđenim kernelu."
-
-#, fuzzy
-#~ msgid "at the firmware prompt."
-#~ msgstr "na OpenFirmware promptu."
+"Morat ćete ručno podignuti sustav s kernelom ${KERNEL} na particiji ${BOOT}, "
+"te argumentom ${ROOT} proslijeđenim kernelu."
