--- a/debian/po/ro.po
+++ b/debian/po/ro.po
@@ -25,7 +25,7 @@ msgstr ""
 "Project-Id-Version: ro\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-09-16 16:44+0300\n"
+"PO-Revision-Date: 2006-09-26 10:30+0300\n"
 "Last-Translator: Eddy Petrişor <eddy.petrisor@gmail.com>\n"
 "Language-Team: Romanian <debian-l10n-romanian@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -45,17 +45,16 @@ msgstr "Continuare fără încărcător de sistem"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Genesi firmware in order for your "
 "system to boot automatically.  At the end of the installation, the system "
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"Unele variabile trebuie să fie iniţializate în Pegasos OpenFirmware pentru "
-"ca sistemul dvs. să poată porni automat. La sfârşitul instalării, sistemul "
-"va reporni. La promptul Pegasos OpenFirmware iniţializaţi următoarele "
-"variabile OpenFirmware pentru activarea pornirii automate:"
+"Unele variabile trebuie să fie iniţializate în firmware-ul Genesi pentru ca "
+"sistemul să poată porni automat. La sfârşitul instalării, sistemul va "
+"reporni. La promptul de firmware iniţializaţi următoarele variabile de "
+"firmware pentru activarea pornirii automate:"
 
 #. Type: note
 #. Description
@@ -92,14 +91,12 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:31
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
 "Va trebui să faceţi acest lucru doar o dată. După aceea, introduceţi comanda "
-"\"boot\" sau reporniţi sistemul pentru a continua la următoarea etapă a a "
-"procesului de instalare."
+"\"boot\" sau reporniţi sistemul pentru a continua în noul sistem instalat."
 
 #. Type: note
 #. Description
@@ -126,7 +123,3 @@ msgid ""
 msgstr ""
 "Va trebui să porniţi manual cu nucleul ${KERNEL} pe partiţia ${BOOT}, iar "
 "${ROOT} trebuie plasat ca argument de nucleu."
-
-#, fuzzy
-#~ msgid "at the firmware prompt."
-#~ msgstr "la promptul OpenFirmware."
