--- a/debian/po/sl.po
+++ b/debian/po/sl.po
@@ -17,12 +17,13 @@
 # Jure Čuhalev <gandalf@owca.info>, 2005.
 # Jure Cuhalev <gandalf@owca.info>, 2006.
 # Matej Kovačič <matej.kovacic@owca.info>, 2006.
+# Jožko Škrablin <jozko.skrablni@gmail.com>, 2006.
 msgid ""
 msgstr ""
 "Project-Id-Version: sl\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-04-26 00:10+0100\n"
+"PO-Revision-Date: 2006-09-06 23:07+0100\n"
 "Last-Translator: Jure Čuhalev <gandalf@owca.info>\n"
 "Language-Team: Slovenian <lugos-slo@lugos.si>\n"
 "MIME-Version: 1.0\n"
@@ -123,7 +124,3 @@ msgid ""
 msgstr ""
 "Zagnati boste mogli ročno z jedrom ${KERNEL} na razdelkih ${BOOT} in "
 "${ROOT}, podanih kot argumenti jedra."
-
-#, fuzzy
-#~ msgid "at the firmware prompt."
-#~ msgstr "na OpenFirmware pozivniku."
