--- a/debian/po/sq.po
+++ b/debian/po/sq.po
@@ -13,7 +13,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-04-22 13:15+0200\n"
+"PO-Revision-Date: 2006-09-25 10:17+0200\n"
 "Last-Translator:  Elian Myftiu <elian.myftiu@gmail.com>\n"
 "Language-Team: Debian L10n Albanian <debian-l10n-albanian@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -84,7 +84,7 @@ msgid ""
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
 "Këtë duhet ta bësh vetëm një herë.  Më pas, shkruaj komandën \"boot\" ose "
-"rinis sistemin për të vazhduar me fazën tjetër të instalimit."
+"rinis sistemin për të vazhduar me hapin tjetër të instalimit."
 
 #. Type: note
 #. Description
@@ -111,7 +111,3 @@ msgid ""
 msgstr ""
 "Do të duhet ta nisësh manualisht me kernelin ${KERNEL} në ndarjen ${BOOT} "
 "dhe duke kaluar ${ROOT} si argument të kernelit."
-
-#, fuzzy
-#~ msgid "at the firmware prompt."
-#~ msgstr "në rreshtin e komandës OpenFirmware."
