[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r41023

--- a/debian/po/pt.po
+++ b/debian/po/pt.po
@@ -12,7 +12,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-09-23 18:28+0000\n"
+"PO-Revision-Date: 2006-09-26 22:25+0000\n"
 "Last-Translator:  Miguel Figueiredo <elmig@debianpt.org>\n"
 "Language-Team:  Portuguese <traduz@debianpt.org>\n"
 "MIME-Version: 1.0\n"
@@ -43,11 +43,12 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
-msgstr "Em alternativa, poderá iniciar o kernel manualmente introduzindo :"
+msgstr ""
+"Em alternativa, poderá iniciar manualmente o kernel introduzindo, na prompt "
+"do firmware:"
 
 #. Type: note
 #. Description
