--- a/debian/po/fr.po
+++ b/debian/po/fr.po
@@ -19,7 +19,7 @@ msgstr ""
 "Project-Id-Version: fr\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-09-23 08:10+0200\n"
+"PO-Revision-Date: 2006-09-26 22:46+0200\n"
 "Last-Translator: Christian Perrier <bubulle@debian.org>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -52,11 +52,12 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
-msgstr "Le noyau pourra également être démarré manuellement avec :"
+msgstr ""
+"Le noyau pourra également être démarré manuellement avec (à la ligne de "
+"commande du micro-code) :"
 
 #. Type: note
 #. Description
