--- a/debian/po/he.po
+++ b/debian/po/he.po
@@ -15,7 +15,7 @@ msgstr ""
 "Project-Id-Version: he\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-09-24 11:56+0300\n"
+"PO-Revision-Date: 2006-09-26 23:23+0300\n"
 "Last-Translator: Lior Kaplan <kaplan@debian.org>\n"
 "Language-Team: Hebrew <debian-hebrew-common@lists.alioth.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -46,11 +46,12 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
-msgstr "לחלופין, תוכל לאתחל את הקרנל ידנית על ידי הכנסה של:"
+msgstr ""
+"לחלופין, תוכל לאתחל את הקרנל ידנית על ידי הכנסה של הטקסט הבא בבקשת הקלט של "
+"הקושחה:"
 
 #. Type: note
 #. Description
