[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r41032

--- a/debian/po/eu.po
+++ b/debian/po/eu.po
@@ -15,7 +15,7 @@ msgstr ""
 "Project-Id-Version: eu\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-09-10 01:59+0200\n"
+"PO-Revision-Date: 2006-09-27 10:00+0200\n"
 "Last-Translator: Piarres Beobide <pi@beobide.net>\n"
 "Language-Team: librezale <librezale@librezale.org>\n"
 "MIME-Version: 1.0\n"
@@ -35,26 +35,26 @@ msgstr "Jarraitu abioko kargatzailerik gabe"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Genesi firmware in order for your "
 "system to boot automatically.  At the end of the installation, the system "
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"Aldagai batzuk Pegasos OpenFirmware-n ezarri behar dira zure sistemak Debian "
-"automatikoki abiaraz dezan.  Instalazioaren amaieran, sistema berrabiarazi "
-"egingo da. Pegasos OpenFirmware prompt gonbitean, ezarri OpenFirmware-ren "
-"aldagai hauek automatikoki abiaraztea gaitzeko:"
+"Aldagai batzuk Genesi OpenFirmware-n ezarri behar dira zure sistemak Debian "
+"automatikoki abiarazi dezan.  Instalazioaren amaieran, sistema berrabiarazi "
+"egingo da. Firmware prompt gonbitean, ezarri Firmware-aren aldagai hauek "
+"automatikoki abiaraztea gaitzeko:"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
-msgstr "Bestela, nukleoa eskuz abiaraz dezakezu hau sartuz:"
+msgstr ""
+"Bestela, nukleoa eskuz abiarazi dezakezu hau sartuz firmware gonbitean hau "
+"idatziz:"
 
 #. Type: note
 #. Description
@@ -81,13 +81,12 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:31
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
-"Hori behin egitea nahikoa da. Ondoren, sartu \"boot\" komandoa edo "
-"berrabiarazi sistema instalazioko hurrengo fasera joateko."
+"Hau behin egitea nahikoa da. Ondoren, sartu \"boot\" komandoa edo "
+"berrabiarazi sistema instalatu berri duzun sistema abiarazteko."
 
 #. Type: note
 #. Description
