--- a/debian/po/fi.po
+++ b/debian/po/fi.po
@@ -16,7 +16,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-09-19 10:11+0300\n"
+"PO-Revision-Date: 2006-09-27 08:09+0300\n"
 "Last-Translator: Tapio Lehtonen <tale@debian.org>\n"
 "Language-Team: Finnish <debian-l10n-finnish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -33,26 +33,26 @@ msgstr "Jatketaan ilman alkulatausohjelmaa"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Genesi firmware in order for your "
 "system to boot automatically.  At the end of the installation, the system "
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"Joidenkin muuttujien arvot Pegasos OpenFirmwaressa on asetettava, jotta "
+"Joidenkin muuttujien arvot Genesi-laiteohjelmistossa on asetettava, jotta "
 "järjestelmä käynnistyisi automaattisesti. Järjestelmä käynnistyy uudelleen "
-"asennuksen lopuksi. Aseta seuraavat muuttujat Pegasos OpenFirmwaren "
-"kehotteessa, jotta automaattikäynnistys toimii:"
+"asennuksen lopuksi. Aseta seuraavat muuttujat laiteohjelmiston kehotteessa, "
+"jotta automaattikäynnistys toimii:"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
-msgstr "Tai voit käynnistää ytimen itse komennolla:"
+msgstr ""
+"Vaihtoehtona on käynnistää ydin itse kirjoittamalla laiteohjelmiston "
+"kehoitteeseen:"
 
 #. Type: note
 #. Description
@@ -80,13 +80,12 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:31
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
 "Tämä on tehtävä vain yhden kerran. Käytä sitten komentoa \"boot\"tai "
-"käynnistä järjestelmä uudelleen edetäksesi seuraavaan asennuksen vaiheeseen."
+"käynnistä järjestelmä uudelleen päästäksesi uuteen asennettuun järjestelmään."
 
 #. Type: note
 #. Description
