--- a/debian/po/gu.po
+++ b/debian/po/gu.po
@@ -44,11 +44,10 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
-msgstr "બીજી રીતે, તમે આ દાખલ કરીને જાતે કર્નલ બુટ કરી શકો છો :"
+msgstr "બીજી રીતે, તમે જાતે કર્નલને ફર્મવેર પુછે ત્યારે, દાખલ કરીને બુટ કરી શકો છો :"
 
 #. Type: note
 #. Description
