--- a/debian/po/lt.po
+++ b/debian/po/lt.po
@@ -15,7 +15,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-09-25 23:00+0300\n"
+"PO-Revision-Date: 2006-09-27 12:01+0300\n"
 "Last-Translator: Kęstutis Biliūnas <kebil@kaunas.init.lt>\n"
 "Language-Team: Lithuanian <komp_lt@konferencijos.lt>\n"
 "MIME-Version: 1.0\n"
@@ -46,11 +46,12 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
-msgstr "Arba, galėsite įkelti branduolį rankiniu būdu, įvesdami :"
+msgstr ""
+"Arba, galėsite įkelti branduolį rankiniu būdu, esant mikroprogramos "
+"kvietimui,įvesdami:"
 
 #. Type: note
 #. Description
