--- a/debian/po/th.po
+++ b/debian/po/th.po
@@ -12,7 +12,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-09-17 17:09+0700\n"
+"PO-Revision-Date: 2006-09-27 14:25+0700\n"
 "Last-Translator: Theppitak Karoonboonyanan <thep@linux.thai.net>\n"
 "Language-Team: Thai <l10n@opentle.org>\n"
 "MIME-Version: 1.0\n"
@@ -29,32 +29,29 @@ msgstr "ติดตั้งต่อโดยไม่มีบูตโหล
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Genesi firmware in order for your "
 "system to boot automatically.  At the end of the installation, the system "
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"ตัวแปรบางตัวใน Pegasos OpenFirmware จะต้องตั้งค่า "
-"เพื่อให้ระบบของคุณสามารถบูตได้โดยอัตโนมัติ เมื่อเสร็จสิ้นกระบวนการติดตั้งแล้ว ระบบจะเริ่มบูตใหม่ "
-"ที่บรรทัดคำสั่งของ Pegasos OpenFirmware ให้ตั้งค่าของ OpenFirmware ดังนี้ "
-"เพื่อที่จะสามารถบูตได้โดยอัตโนมัติ:"
+"คุณจำเป็นต้องตั้งค่าตัวแปรบางตัวในเฟิร์มแวร์ Genesi เพื่อให้ระบบของคุณสามารถบูตได้โดยอัตโนมัติ "
+"เมื่อเสร็จสิ้นกระบวนการติดตั้งแล้ว ระบบจะเริ่มบูตใหม่ ที่บรรทัดคำสั่งของเฟิร์มแวร์ "
+"ให้ตั้งค่าของเฟิร์มแวร์ดังนี้ เพื่อที่จะสามารถบูตได้โดยอัตโนมัติ:"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
-msgstr "หรือมิฉะนั้น คุณก็ยังสามารถสั่งบูตเคอร์เนลเองโดยป้อนคำสั่ง:"
+msgstr "หรือมิฉะนั้น คุณก็ยังสามารถสั่งบูตเคอร์เนลเองโดยป้อนคำสั่งที่บรรทัดคำสั่งของเฟิร์มแวร์:"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:31
 msgid "Setting firmware variables for automatic boot"
-msgstr "กำลังตั้งค่าตัวแปรเฟิร์มแวร์สำหรับการบูตอัตโนมัติ"
+msgstr "การตั้งค่าตัวแปรเฟิร์มแวร์สำหรับการบูตอัตโนมัติ"
 
 #. Type: note
 #. Description
@@ -74,13 +71,12 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:31
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
 "การสั่งดังกล่าวเพียงครั้งเดียวก็เพียงพอ ในครั้งต่อไป เพียงป้อนคำสั่ง \"boot\" "
-"หรือบูตเครื่องใหม่เพื่อเข้าสู่ขั้นตอนการติดตั้งขั้นต่อไป"
+"หรือบูตเครื่องใหม่เพื่อเข้าสู่ระบบที่ติดตั้งใหม่นี้"
 
 #. Type: note
 #. Description
