--- a/debian/po/da.po
+++ b/debian/po/da.po
@@ -14,7 +14,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-09-25 14:36+0200\n"
+"PO-Revision-Date: 2006-09-27 13:07+0200\n"
 "Last-Translator: Claus Hindsgaul <claus.hindsgaul@gmail.com>\n"
 "Language-Team: Danish\n"
 "MIME-Version: 1.0\n"
@@ -47,11 +47,12 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
-msgstr "Alternativt vil du kunne starte kernen op manuelt ved at skrive :"
+msgstr ""
+"Alternativt vil du kunne starte kernen op manuelt ved at skrive følgende i "
+"firmware-prompten:"
 
 #. Type: note
 #. Description
