--- a/debian/po/hr.po
+++ b/debian/po/hr.po
@@ -44,11 +44,12 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
-msgstr "Alternativno, moći ćete ručno bootati kernel unoseći:"
+msgstr ""
+"Alternativno, moći ćete ručno bootati kernel tako da na firmware promptu "
+"unesete:"
 
 #. Type: note
 #. Description
