[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r41038

--- a/debian/po/el.po
+++ b/debian/po/el.po
@@ -19,13 +19,13 @@ msgstr ""
 "Project-Id-Version: el\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-07-27 02:19+0300\n"
+"PO-Revision-Date: 2006-09-27 17:50+0300\n"
 "Last-Translator: quad-nrg.net <yodesy@quad-nrg.net>\n"
 "Language-Team: el <debian-l10n-greek@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.11.2\n"
+"X-Generator: KBabel 1.11.4\n"
 "Plural-Forms:  nplurals=2; plural=(n != 1);\n"
 
 #. Type: text
@@ -38,29 +38,27 @@ msgstr "Συνέχιση χωρίς φορτωτή εκκίνησης"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Genesi firmware in order for your "
 "system to boot automatically.  At the end of the installation, the system "
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"Πρέπει να καθοριστούν ορισμένες μεταβλητές στο λογισμικό Pegasos "
-"OpenFirmware για να μπορέσει το σύστημα σας να εκκινήσει αυτόματα το "
-"σύστημα.  Στο τέλος αυτού του σταδίου της εγκατάστασης, θα γίνει "
-"επανεκκίνηση και το λογισμικό θα προσπαθήσει να κάνει αυτόματη εκκίνηση. "
-"Αυτό θα σας φέρει στην γραμμή εντολών του Pegasos OpenFirmware, όπου "
-"μπορείτε να ορίσετε τις ακόλουθες μεταβλητές:"
+"Θα πρέπει να καθοριστούν ορισμένες μεταβλητές στο firmware του συστήματος "
+"Genesi για να μπορεί το σύστημά σας να εκκινείται αυτόματα. Στο τέλος της "
+"εγκατάστασης θα γίνει επανεκκίνηση του συστήματος. Στο προτρεπτικό του "
+"firmware ρυθμίστε τις ακόλουθες μεταβλητές του ώστε να ενεργοποιήσετε την "
+"αυτόματη εκκίνηση:"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
 msgstr ""
-"Εναλλακτικά, μπορείτε να εκκινήσετε τον πυρήνα χειροκίνητα πληκτρολογώντας :"
+"Εναλλακτικά, θα έχετε την δυνατότητα να εκκινήσετε τον πυρήνα με το χέρι "
+"εισάγοντας στο προτρεπτικό του firwmare:"
 
 #. Type: note
 #. Description
@@ -88,14 +86,13 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:31
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
-"Αυτή η εργασία χρειάζεται να γίνει μόνο μία φορά. Στη συνέχεια δώστε την "
-"εντολή \"boot\" ή επανεκκινήστε το σύστημα, για να προχωρήσετε στο επόμενο "
-"στάδιο της εγκατάστασης του Debian."
+"Αυτό χρειάζεται να το κάνετε μόνο μία φορά. Στη συνέχεια, εισάγετε την "
+"εντολή \"boot\" ή επανεκκινήστε το σύστημα για να περάσετε στην καινούρια "
+"σας εγκατάσταση."
 
 #. Type: note
 #. Description
