--- a/debian/po/ro.po
+++ b/debian/po/ro.po
@@ -25,7 +25,7 @@ msgstr ""
 "Project-Id-Version: ro\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-09-26 10:30+0300\n"
+"PO-Revision-Date: 2006-09-27 23:38+0300\n"
 "Last-Translator: Eddy Petrişor <eddy.petrisor@gmail.com>\n"
 "Language-Team: Romanian <debian-l10n-romanian@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -56,14 +56,16 @@ msgstr ""
 "reporni. La promptul de firmware iniţializaţi următoarele variabile de "
 "firmware pentru activarea pornirii automate:"
 
+# XXX: nu prea îmi place începutul
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
-msgstr "Sau veţi putea să porniţi nucleul manual introducând:"
+msgstr ""
+"Există şi posibilitatea să porniţi nucleul manual introducând la promptul de "
+"firmware:"
 
 #. Type: note
 #. Description
