--- a/debian/po/tl.po
+++ b/debian/po/tl.po
@@ -20,7 +20,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-09-20 22:34+0800\n"
+"PO-Revision-Date: 2006-09-28 00:01+0800\n"
 "Last-Translator: Eric Pareja <xenos@upm.edu.ph>\n"
 "Language-Team: Tagalog <debian-tl@banwa.upm.edu.ph>\n"
 "MIME-Version: 1.0\n"
@@ -37,28 +37,26 @@ msgstr "Magpatuloy na walang boot loader"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Genesi firmware in order for your "
 "system to boot automatically.  At the end of the installation, the system "
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"May mga variable na kailangang itakda sa Pegasos OpenFirmware upang mag-boot "
-"ng awtomatiko.  Sa katapusan ng pagluklok, mag-re-reboot ang sistema.  Sa "
-"Pegasos OpenFirmware prompt, itakda ang mga sumusunod ng mga OpenFirmware "
-"variable upang gumana ang auto-booting:"
+"May mga variable na kailangang itakda sa Genesi firmware upang mag-boot ng "
+"awtomatiko.  Sa katapusan ng pagluklok, mag-re-reboot ang sistema.  Sa "
+"firmware prompt, itakda ang mga sumusunod na mga firmware variable upang "
+"gumana ang auto-booting:"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
 msgstr ""
 "Sa halip, maaari kayong mag-boot ng kernel ng mano-mano sa pamamagitan ng "
-"pagbigay ng:"
+"pagbigay sa firmware prompt ng:"
 
 #. Type: note
 #. Description
@@ -86,14 +84,13 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:31
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
 "Kinakailangan lang ninyong gawin ito ng isang beses.  Matapos nito, ipasok "
-"ang \"boot\" na utos o i-reboot ang sistema upang magpatuloy sa susunod na "
-"bahagi ng pagluklok."
+"ang \"boot\" na utos o i-reboot ang sistema upang magpatuloy sa inyong "
+"bagong luklok na sistema."
 
 #. Type: note
 #. Description
