[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r41046

--- a/debian/po/hi.po
+++ b/debian/po/hi.po
@@ -3,7 +3,7 @@
 #
 # DO NOT MODIFY IT DIRECTLY : SUCH CHANGES WILL BE LOST
 # 
-# translation of new-hi.po to Hindi
+# translation of hi.po to Hindi
 # translation of debian-installer_packages_po.po to
 # translation of debian-installer_packages_po.po to
 # translation of debian-installer_packages_po.po to
@@ -19,10 +19,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: new-hi\n"
+"Project-Id-Version: hi\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-09-25 23:23+0530\n"
+"PO-Revision-Date: 2006-09-28 09:32+0530\n"
 "Last-Translator: Nishant Sharma <me at nishants.net>\n"
 "Language-Team: Hindi\n"
 "MIME-Version: 1.0\n"
@@ -53,17 +53,16 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
-msgstr "वैकल्पिक रूप से, कर्नेल को बूट करने के लिए आप निम्नलिखित टंकित कर सकते हैं:"
+msgstr "वैकल्पिक रूप से, आप फर्मवेयर प्रॉम्पट पर लिख कर कर्नेल हस्तचालित बूट कर सकते हैं।"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:31
 msgid "Setting firmware variables for automatic boot"
-msgstr ""
+msgstr "स्वचालित बूट के लिए फर्मवेयर प्राचल नियत कर रहे हैं"
 
 #. Type: note
 #. Description
@@ -75,6 +74,10 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
+"लिनक्स स्वचालित बूट करने के लिए नेटवाइन्डर नेटटीरॉम फर्मवेयर में कुछ प्राचल नियत करने होते "
+"है. इस संस्थापन चरण के अंत में आपका तंत्र रीबूट होगा और फर्मवेयर स्वतः बूट का प्रयास करेगा। "
+"आप कोई भी कुंजी दबा कर उसे रोक सकते है। उसके बाद आपको नेटटीरॉम कमांड तंत्र में छोड़ दिया "
+"जाएगा जहाँ आपको निम्नलिखित कमांड चलाने होंगेः"
 
 #. Type: note
 #. Description
@@ -83,6 +86,8 @@ msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
+"आपको यह केवल एक ही बार करना है। इसके बाद अपने नये संस्थापित तंत्र में जारी रखने के लिए  "
+"\"boot\" कमांड चलाएँ या तंत्र को रीबूट करें।"
 
 #. Type: note
 #. Description
@@ -97,6 +102,8 @@ msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
+"कोई भी बूटलोडर संस्थापित नहीं हुआ क्योंकि या तो आपने ऐसा न करने का चयन किया या फिरआपके "
+"संघटन विशेष के लिए अभी कोई बूटलोडर समर्थित नहीं है।"
 
 #. Type: note
 #. Description
@@ -105,3 +112,5 @@ msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
+"आपको {$BOOT} पार्टिशन पर कर्नेल ${KERNEL} को ${ROOT} कर्नेल चर देते हुए हस्तचालित बूट "
+"करना पड़ेगा।"
