[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r41072

--- a/debian/po/ru.po
+++ b/debian/po/ru.po
@@ -17,7 +17,7 @@ msgstr ""
 "Project-Id-Version: ru\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-09-25 20:29+0400\n"
+"PO-Revision-Date: 2006-09-28 21:18+0400\n"
 "Last-Translator: Yuri Kozlov <kozlov.y@gmail.com>\n"
 "Language-Team: Russian <debian-l10n-russian@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -51,11 +51,12 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
-msgstr "Или вы можете загрузить ядро вручную с помощью команд:"
+msgstr ""
+"Или вы можете загрузить ядро вручную введя в приглашении микропрограммы "
+"следующее:"
 
 #. Type: note
 #. Description
