--- a/debian/po/gl.po
+++ b/debian/po/gl.po
@@ -12,7 +12,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-09-24 17:02+0200\n"
+"PO-Revision-Date: 2006-09-29 01:33+0200\n"
 "Last-Translator: Jacobo Tarrio <jtarrio@debian.org>\n"
 "Language-Team: Galician <trasno@ceu.fi.udc.es>\n"
 "MIME-Version: 1.0\n"
@@ -43,13 +43,12 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
 msgstr ""
-"De xeito alternativo, tamén ha poder iniciar o núcleo manualmente "
-"introducindo :"
+"De xeito alternativo, ha poder iniciar o núcleo manualmente introducindo no "
+"indicativo do firmware:"
 
 #. Type: note
 #. Description
