[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r41100

--- a/debian/po/es.po
+++ b/debian/po/es.po
@@ -49,7 +49,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-09-23 13:30+0200\n"
+"PO-Revision-Date: 2006-09-29 17:48+0200\n"
 "Last-Translator: Javier Fernández-Sanguino Peña <jfs@debian.org>\n"
 "Language-Team:  Debian Spanish <debian-l10n-spanish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -81,11 +81,12 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
-msgstr "También podrá cargar el núcleo manualmente si introduce:"
+msgstr ""
+"También podrá cargar el núcleo manualmente si introduce, en el indicador del "
+"firmware:"
 
 #. Type: note
 #. Description
