[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r41195

--- a/debian/po/hi.po
+++ b/debian/po/hi.po
@@ -19,7 +19,7 @@ msgstr ""
 "Project-Id-Version: hi\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-09-29 01:05+0530\n"
+"PO-Revision-Date: 2006-10-01 21:33+0530\n"
 "Last-Translator: Nishant Sharma <me at nishants.net>\n"
 "Language-Team: Hindi\n"
 "MIME-Version: 1.0\n"
@@ -107,5 +107,5 @@ msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
-"आपको {$BOOT} पार्टिशन पर कर्नेल ${KERNEL} को ${ROOT} कर्नेल चर देते हुए हस्तचालित बूट "
+"आपको ${BOOT} पार्टिशन पर कर्नेल ${KERNEL} को ${ROOT} कर्नेल चर देते हुए हस्तचालित बूट "
 "करना पड़ेगा।"
