--- a/debian/po/zh_TW.po
+++ b/debian/po/zh_TW.po
@@ -12,7 +12,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-07-30 01:30+0800\n"
+"PO-Revision-Date: 2006-10-01 22:24+0800\n"
 "Last-Translator: Tetralet <tetralet@gmail.com>\n"
 "Language-Team: Debian-user in Chinese [Big5] <debian-chinese-big5@lists."
 "debian.org>\n"
@@ -30,25 +30,24 @@ msgstr "不安裝開機程式，繼續進行"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Genesi firmware in order for your "
 "system to boot automatically.  At the end of the installation, the system "
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"為了讓系統能自動開機，您必須在 Pegasos OpenFirmware 中設定一些參數。在安裝結"
-"束後，系統將會重新開機。在 Pegasos OpenFirmware 的提示文字上，設定以下的 "
-"OpenFirmware 參數來啟用自動開機："
+"您必須在 Genesi 的韌體中設定一些參數才能讓您的系統能夠自動開機。在安裝結束"
+"後，系統將會重新開機。之後，在韌體的提示文字上，設定以下的韌體參數來啟用自動"
+"開機："
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
-msgstr "而或者，您也可以在 在 OpenFirmware 的提示文字上，輸入："
+msgstr ""
+"而或者，您也可以藉由手動來讓 Kernel 開機，方法是在韌體的提示文字上輸入："
 
 #. Type: note
 #. Description
@@ -74,13 +73,12 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:31
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
-"這些動作只需進行一次。之後，輸入 \"boot\" 指令或重新啟動系統來繼續進行下一個"
-"安裝階段。"
+"這些動作只需進行一次。之後，輸入 boot 指令或重新啟動系統就能進入您新安裝好的"
+"系統。"
 
 #. Type: note
 #. Description
