--- a/debian/po/eo.po
+++ b/debian/po/eo.po
@@ -15,7 +15,7 @@ msgstr ""
 "Project-Id-Version: eo\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-09-25 11:54+0200\n"
+"PO-Revision-Date: 2006-10-03 01:26+0200\n"
 "Last-Translator: Serge Leblanc <serge.leblanc@wanadoo.fr>\n"
 "Language-Team: Esperanto <debian-l10n-esperanto@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -46,11 +46,12 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
-msgstr "Alimaniere, vi povos mane ekŝargi la kernon per enskribu:"
+msgstr ""
+"Alimaniere, vi povos mane ekŝargi la kernon per enskribu, dum la firmvara "
+"invito:"
 
 #. Type: note
 #. Description
