--- a/debian/po/et.po
+++ b/debian/po/et.po
@@ -8,11 +8,11 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-07-12 14:54+0300\n"
-"Last-Translator: Siim Pıder <windo@windowlicker.dyn.ee>\n"
+"PO-Revision-Date: 2006-10-03 10:20+0300\n"
+"Last-Translator: Siim P√µder <windo@p6drad-teel.net>\n"
 "Language-Team: Eesti <linuxiabi@hot.ee>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=iso-8859-1\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #. Type: text
@@ -20,37 +20,37 @@ msgstr ""
 #. Main menu item
 #: ../nobootloader.templates:4
 msgid "Continue without boot loader"
-msgstr "Alglaadurita j‰tkamine"
+msgstr "Alglaadurita j√§tkamine"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Genesi firmware in order for your "
 "system to boot automatically.  At the end of the installation, the system "
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"Et su s¸steem vıiks automaatselt Debiani alglaadida, tuleb seada mıned "
-"Pegasos OpenFirmware muutujad. Paigaldamise lıpus sooritab s¸steem "
+"Et su s√ºsteem v√µiks automaatselt Debiani alglaadida, tuleb seada m√µned "
+"Pegasos OpenFirmware muutujad. Paigaldamise l√µpus sooritab s√ºsteem "
 "alglaadimise. Automaatse alglaadimise saavutamiseks sisesta Pegasos "
-"OpenFirmware k‰sureal j‰rgnevad muutujad:"
+"OpenFirmware k√§sureal j√§rgnevad muutujad:"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
-msgstr "Teise variandina vıid tuuma ka k‰sitsi alglaadida, sisestades:"
+msgstr ""
+"Teise variandina v√µid tuuma ka k√§sitsi alglaadida, p√ºsivara k√§sureale "
+"j√§rgnevat sisestades:"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:31
 msgid "Setting firmware variables for automatic boot"
-msgstr "P¸sivara muutujate seadmine automaatseks alglaadimiseks"
+msgstr "P√ºsivara muutujate seadmine automaatseks alglaadimiseks"
 
 #. Type: note
 #. Description
@@ -62,28 +62,27 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
-"Et su s¸steem vıiks automaatselt linuxi alglaadida, tuleb Netwinder NETTRom "
-"p¸sivaras seada mıned muutujad. Selle paigaldamisastme lıpus sooritab "
-"s¸steem alglaadimise, misj‰rel p¸sivara p¸¸ab automaatselt alglaadida. Selle "
-"peatamiseks vajuta suvalist klahvi. Sind lastakse NeTTrom k‰sus¸steemi, kus "
-"pead sisestama j‰rgnevad k‰sud:"
+"Et su s√ºsteem v√µiks automaatselt linuxi alglaadida, tuleb Netwinder NETTRom "
+"p√ºsivaras seada m√µned muutujad. Selle paigaldamisastme l√µpus sooritab "
+"s√ºsteem alglaadimise, misj√§rel p√ºsivara p√º√ºab automaatselt alglaadida. Selle "
+"peatamiseks vajuta suvalist klahvi. Sind lastakse NeTTrom k√§sus√ºsteemi, kus "
+"pead sisestama j√§rgnevad k√§sud:"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:31
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
-"Pead nında tegema ainult ¸he korra. Edaspidi sisesta k‰sk \"boot\" vıi "
-"soorita alglaadimine, et j‰tkata paigaldamise j‰rgmise astmega."
+"Pead n√µnda tegema ainult √ºhe korra. Edaspidi sisesta k√§sk \"boot\" v√µi "
+"soorita alglaadimine, et j√§tkata paigaldamise j√§rgmise astmega."
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:51
 msgid "No boot loader installed"
-msgstr "‹htki alglaadurit pole paigaldatud"
+msgstr "√úhtki alglaadurit pole paigaldatud"
 
 #. Type: note
 #. Description
@@ -92,8 +91,8 @@ msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
-"‹htki alglaadurit ei paigaldatud, kuna sa kas ise soovisid alglaadurit mitte "
-"paigaldada vıi siis pole su spetsiifilist arhitektuuri toetavat alglaadurit "
+"√úhtki alglaadurit ei paigaldatud, kuna sa kas ise soovisid alglaadurit mitte "
+"paigaldada v√µi siis pole su spetsiifilist arhitektuuri toetavat alglaadurit "
 "saadaval."
 
 #. Type: note
@@ -103,5 +102,5 @@ msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
-"Pead alglaadima k‰sitsi tuuma ${KERNEL} partitsioonil ${BOOT} sisestades "
+"Pead alglaadima k√§sitsi tuuma ${KERNEL} partitsioonil ${BOOT} sisestades "
 "tuuma argumendiks ${ROOT}."
