--- a/debian/po/tr.po
+++ b/debian/po/tr.po
@@ -18,7 +18,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-09-08 00:02+0300\n"
+"PO-Revision-Date: 2006-10-03 03:03+0300\n"
 "Last-Translator: Recai Oktaş <roktas@omu.edu.tr>\n"
 "Language-Team: Debian L10n Turkish <debian-l10n-turkish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -36,28 +36,26 @@ msgstr "Önyükleyicisiz devam et"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Genesi firmware in order for your "
 "system to boot automatically.  At the end of the installation, the system "
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"Sisteminizin otomatik olarak açılması için Pegasos OpenFirmware aygıt "
-"yazılımındaki bazı değişkenlerin ayarlanması gerekiyor.  Bu kurulum "
-"aşamasının sonunda sistem tekrar başlatılacak.  Otomatik önyüklemeyi "
-"etkinleştirmek için Pegasos OpenFirmware komut isteminde aşağıdaki "
-"OpenFirmware değişkenlerini ayarlayın:"
+"Sisteminizin otomatik olarak açılması için Genesi aygıt yazılımındaki bazı "
+"değişkenlerin ayarlanması gerekiyor.  Bu kurulum aşamasının sonunda sistem "
+"tekrar başlatılacak.  Otomatik önyüklemeyi etkinleştirmek için aygıt komut "
+"isteminde aşağıdaki aygıt yazılımı değişkenlerini ayarlayın:"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
 msgstr ""
-"Alternatif olarak, şu satırı girerek çekirdeği elle yüklemeniz de mümkün:"
+"Alternatif olarak, aygıt komut isteminde şu satırı girerek çekirdeği elle "
+"yüklemeniz de mümkün:"
 
 #. Type: note
 #. Description
@@ -85,14 +83,13 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:31
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
 "Bu işlemi sadece bir kere yapmanız gerekiyor.  Sonraki durumlarda \"boot\" "
-"komutunu girin veya bir sonraki kurulum aşamasıyla devam edilmesi için "
-"sistemi yeniden başlatın."
+"komutunu girin veya yeni kurulu sisteminizle devam etmek için sistemi "
+"yeniden başlatın."
 
 #. Type: note
 #. Description
